--- a/main.html
+++ b/main.html
@@ -10,6 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div>
+		<p>My current favourite song is <Janaganamana><a href="https://www.youtube.com/watch?v=HtMF973tXIY"></a></p>
+	</div>
 
 </body>
 
