--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div>
-		<p>My current favourite song is <Janaganamana><a href="https://www.youtube.com/watch?v=HtMF973tXIY"></a></p>
+		<p>My current favourite song is <Janaganamana></p>
 	</div>
 
 </body>
